--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
-body {
+*
+{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.Navbar
+{
+  display: flex;
+  flex-direction: row;
+  max-width: 70%;
+  margin: 0px auto;
+  padding: 20px;
+  justify-content: space-between;
+}
+
+.Navbar .link a
+{
+  padding: 10px 30px;
+  line-height: 40px;
+  text-decoration: none;
+  color: black;
+  font-weight: 700;
+  font-size: 16px;
+}
+
+.Home
+{
+  max-width: 70%;
+  margin: 0px auto;
+  padding: 20px;
+}
+
+.Home h1{
+  margin-top: 60px;
 }
